# riscv-disassembler

./: CMakeLists.txt
src/: riscv-disas.c  riscv-disas.h
